File API is completely fucked on windows omg (can't delete files) swapped to Path API